# Ham-Sandwich-Tree

./: .gitignore  AmaruEngine.sln  AmaruEngine.vcxproj  CMakeLists.txt  Informe.ipynb  Maze.sln  Maze.vcxproj  Maze.vcxproj.filters  README.MD
Assets/Shaders/ColorRenderization/: ColorRenderization.frag  ColorRenderization.vert
Assets/Shaders/ColorShader/: Color.frag  ColorVert.glsl
Assets/Shaders/LitShader/: Lit.frag
Assets/Shaders/TextureShader/: TextureFrag.glsl  TextureVert.glsl
Assets/Shaders/UnlitShader/: Unlit.frag
Profiling/: HST.py  HSTNode.py  HSTProfile.py
data/: stats_hst.csv  stats_hst_mixed.csv  stats_hst_split.csv
includes/glad/: glad.h
src/: Main.cpp  glad.c
src/private/: Maze.cpp  Utility.cpp  graph.cpp
src/private/Core/: Global.cpp  Window.cpp
src/private/Core/Components/: InputComponent.cpp  MazeGeneratorComponent.cpp  MovementComponent.cpp  RenderComponent.cpp  TestMovementComponent.cpp
src/private/Core/Components/Input/: FollowMouseComponent.cpp  InputComponent.cpp
src/private/Core/Components/Maze2D/: MazeGeneratorComponent.cpp  MovementComponent.cpp
src/private/Core/Components/Physics/: AColliderComponent.cpp  ColliderComponent.cpp  Rigidbody2DComponent.cpp  Rigidbody2DComponent.h  RigidbodyComponent.cpp  SquareColliderComponent.cpp
src/private/Core/Components/Render/: CameraComponent.cpp  RenderComponent.cpp  RenderCubeComponent.cpp  RenderQuadComponent.cpp
src/private/Core/Components/TestComponents/: TestMovementComponent.cpp
src/private/Core/Materials/: AMaterial.cpp  BaseMaterial.cpp  ColorMaterial.cpp  GizmosMaterial.cpp  LitMaterial.cpp  Shader.cpp  TextureMaterial.cpp  UnlitMaterial.cpp
src/private/Core/Objects/: AObject.cpp  CubeObject.cpp  EmptyObject.cpp  Maze.cpp  Player.cpp  SceneController.cpp  SquareObject.cpp  TestObject.cpp
src/private/Core/Objects/2D/: Square.cpp
src/private/Core/Objects/3D/: Cube.cpp
src/private/Core/Objects/General/: CameraObject.cpp
src/private/Core/Objects/Light/: PointLight.cpp
src/private/Core/Physics/: PhysicsEngine.cpp  PhysicsEngine2D.cpp  PhysicsEngine3D.cpp
src/private/Core/Render/: Color.cpp  Render.cpp  Shader.cpp
src/private/Core/Scenes/: ASceneController.cpp  Maze2DScene.cpp  TestColisionScene.cpp  TestCollisionScene.cpp  TestPhongLightScene.cpp  TestScene.cpp
src/private/Game/Components/: HSTreeComponent.cpp  MazeGeneratorComponent.cpp  MovementComponent.cpp  Polygon.cpp
src/private/Game/Objects/: HSTree.cpp  Maze.cpp  Player.cpp  Point.cpp
src/private/Game/Scenes/: HamSandwichTreeScene.cpp  Maze2DScene.cpp  Maze3DScene.cpp
src/private/Math/: Matrtix4x4.cpp  Transformation.cpp  Vector2.cpp  Vector3.cpp  Vector4.cpp
src/private/Util/: Graph.cpp  Logger.cpp  Singleton.cpp  Utility.cpp
src/public/: Maze.h  Utility.h
src/public/Core/: Global.h  Window.h
src/public/Core/Components/: IComponent.h  InputComponent.h  MazeGeneratorComponent.h  MovementComponent.h  RenderComponent.h  TestMovementComponent.h
src/public/Core/Materials/: AMaterial.h  BaseMaterial.h  ColorMaterial.h  GizmosMaterial.h  LitMaterial.h  Shader.h  TextureMaterial.h  UnlitMaterial.h
src/public/Core/Objects/: AObject.h  CubeObject.h  EmptyObject.h  Maze.h  Player.h  SceneController.h  SquareObject.h  TestObject.h
src/public/Core/Physics/: PhysicsEngine.h  PhysicsEngine2D.h  PhysicsEngine3D.h
src/public/Core/Render/: Color.h  Render.h  Shader.h
src/public/Core/Scenes/: ASceneController.h  TestColisionScene.h  TestPhongLightScene.h  TestScene.h
src/public/Game/Components/: HSTreeComponent.h  MovementComponent.h  Polygon.h
src/public/Game/Objects/: HSTree.h  Maze.h  Player.h  Point.h
src/public/Game/Scenes/: HamSandwichTreeScene.h  Maze2DScene.h  Maze3DScene.h
src/public/Math/: Matrix4x4.h  Transformation.h  Vector2.h  Vector3.h  Vector4.h
src/public/Util/: Graph.h  Logger.h  Singleton.h  Utility.h
(+37 files in other folders)
